fix styling for landing on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,13 @@
 /*landing page styles */
+body {
+    margin: 0;
+}
 h1, h2{
     font-family: 'Timmana', sans-serif;
 }
 p {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.3em;
     margin: 1rem 0;
 }
 a {
@@ -97,13 +100,22 @@ section img {
 
 @media only screen and (max-width: 1200px) {
     main {
-    padding: 0 3rem;
+    padding: 0;
+    }
+    section {
+        padding: 1.5rem 5rem ;
     }
 }
 
 @media only screen and (max-width: 900px) {
-    main {
-    padding: 0;
+    section {
+        padding: 1.5 3rem;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    html {
+        font-size: 120%;
     }
 }
 
